--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/strapi": "4.12.1",
     "better-sqlite3": "8.5.0",
     "pg": "^8.11.2",
-    "pg-connection-string": "^2.6.2"
+    "pg-connection-string": "^2.6.2",
+    "strapi-plugin-populate-deep": "^3.0.0"
   },
   "author": {
     "name": "A Strapi developer"
