--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^2.0.4",
     "@strapi/plugin-i18n": "4.12.1",
     "@strapi/plugin-users-permissions": "4.12.1",
+    "@strapi/provider-upload-cloudinary": "^4.12.7",
     "@strapi/strapi": "4.12.1",
     "better-sqlite3": "8.5.0",
     "pg": "^8.11.2",
