--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@strapi/plugin-users-permissions": "4.12.1",
     "@strapi/provider-upload-cloudinary": "^4.12.7",
     "@strapi/strapi": "4.12.1",
+    "axios": "^1.5.0",
     "better-sqlite3": "8.5.0",
+    "fast-two-sms": "^3.0.0",
+    "fast2sms": "^1.0.3",
     "pg": "^8.11.2",
     "pg-connection-string": "^2.6.2",
     "strapi-plugin-populate-deep": "^3.0.0"
